# twin

./: .gitignore
backend/: Nikhil_Suresh_Resume.docx  pyproject.toml  requirements.txt  resources.py  utils.py
backend/data/: facts.json  summary.txt
frontend/: package-lock.json
frontend/app/: layout.tsx
terraform/: main.tf  prod.tfvars  terraform.tfvars  variables.tf
